Fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ h6 {
   border-radius: 50%;
   text-align: center;
   width: 36px;
-  height: 36px;
+  height: 34px;
   transition: 0.3s;
 }
 
